增加编译参数，升级版本号